Correct grammar (create->creates)

--- a/content/reference/multimethods.adoc
+++ b/content/reference/multimethods.adoc
@@ -19,7 +19,7 @@ A Clojure multimethod is a combination of a _dispatching_ _function_, and one or
 
 The multimethod system exposes this API: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmulti[defmulti] creates new multimethods, http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmethod[defmethod] creates and installs a new method of multimethod associated with a dispatch-value, http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/remove-method[remove-method] removes the method associated with a dispatch-value and http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/prefer-method[prefer-method] creates an ordering between methods when they would otherwise be ambiguous.
 
-Derivation is determined by a combination of either Java inheritance (for class values), or using Clojure's ad hoc hierarchy system. The hierarchy system supports derivation relationships between names (either symbols or keywords), and relationships between classes and names. The http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/derive[derive] function create these relationships, and the http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/isa?[isa?] function tests for their existence. Note that http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/isa?[isa?] is not http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/instance?[instance?].
+Derivation is determined by a combination of either Java inheritance (for class values), or using Clojure's ad hoc hierarchy system. The hierarchy system supports derivation relationships between names (either symbols or keywords), and relationships between classes and names. The http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/derive[derive] function creates these relationships, and the http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/isa?[isa?] function tests for their existence. Note that http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/isa?[isa?] is not http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/instance?[instance?].
 
 You can define hierarchical relationships with +(derive child parent)+. Child and parent can be either symbols or keywords, and must be namespace-qualified:
 
