Add a 'that' to correct the grammar

--- a/content/reference/namespaces.adoc
+++ b/content/reference/namespaces.adoc
@@ -15,7 +15,7 @@ toc::[]
 
 Namespaces are mappings from simple (unqualified) symbols to Vars and/or Classes. Vars can be interned in a namespace, using _**def**_ or any of its variants, in which case they have a simple symbol for a name and a reference to their containing namespace, and the namespace maps that symbol to the same var. A namespace can also contain mappings from symbols to vars interned in other namespaces by using http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/refer[refer] or http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/use[use], or from symbols to Class objects by using http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/import[import]. Note that namespaces are first-class, they can be enumerated etc. Namespaces are also dynamic, they can be created, removed and modified at runtime, at the Repl etc.
 
-The best way to set up a new namespace at the top of a Clojure source file is to use the http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns[ns macro]. By default this will create a new namespace contains mappings for the classnames in +java.lang+ plus `clojure.lang.Compiler`, and the functions in `clojure.core`.
+The best way to set up a new namespace at the top of a Clojure source file is to use the http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns[ns macro]. By default this will create a new namespace that contains mappings for the classnames in +java.lang+ plus `clojure.lang.Compiler`, and the functions in `clojure.core`.
 
 At the Repl it's best to use http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/in-ns[in-ns], in which case the new namespace will contain mappings only for the classnames in +java.lang+. In order to access the names from the `clojure.core` namespace you must execute +(clojure.core/refer 'clojure.core)+. The `user` namespace at the Repl has already done this.
 
