--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -82,7 +82,7 @@ Community volunteers maintain http://dev.clojure.org/display/doc/getting+started
 * http://boot-clj.com/[Boot] - build tooling for Clojure: instead of a special-purpose DSL, Boot supplies abstractions and libraries you can use to automate nearly any build scenario with the full power of the Clojure language
 * http://www.gnu.org/software/emacs/[Emacs] with https://github.com/clojure-emacs/cider[CIDER]
 * http://www.vim.org/[Vim] with https://github.com/tpope/vim-fireplace[Fireplace]
-* https://code.google.com/p/counterclockwise/[Eclipse Counterclockwise]
+* http://doc.ccw-ide.org/[Eclipse Counterclockwise]
 * IntelliJ https://cursiveclojure.com/[Cursive]
 * https://sekao.net/nightcode/[Nightcode]
 * http://www.lighttable.com/[Light Table]
