minor updates to about/spec

--- a/content/about/spec.adoc
+++ b/content/about/spec.adoc
@@ -190,7 +190,7 @@ production runtime dependency on ``test.check``.
 === Overview
 ==== Predicative specs
 The basic idea is that specs are nothing more than a logical composition of predicates. At the bottom we are talking
-about the simple boolean predicates you are used to like ``integer?`` or `symbol?`, or expressions you build yourself
+about the simple boolean predicates you are used to like ``int?`` or `symbol?`, or expressions you build yourself
 like `#(< 42 % 66)`
 **spec** adds logical ops like ``spec/and`` and ``spec/or`` which combine specs in a logical way and offer deep reporting,
 generation and conform support and, in the case of ``spec/or``, tagged returns.
@@ -316,12 +316,12 @@ You can use ``conform`` directly in your implementations to get its destructurin
 ``conform`` can be used e.g. in macro implementations and at I/O boundaries.
 
 ==== During development
-You can selectively instrument functions and namespaces with ``instrument`` and ``instrument-ns``. ``instrument`` swaps out
-the fn var with a wrapped version of the fn that tests all three of the fn specs. ``unstrument`` returns a fn to its
+You can selectively instrument functions and namespaces with ``instrument``, which swaps out
+the fn var with a wrapped version of the fn that tests the ``:args`` spec. ``unstrument`` returns a fn to its
 original version. You can generate data for interactive testing with ``gen/sample``.
 
 ==== For testing
-You can run a suite of spec-generative tests on an entire ns with ``run-tests``. You can get a test.check compatible generator
+You can run a suite of spec-generative tests on an entire ns with ``check``. You can get a test.check compatible generator
 for a spec by calling ``gen``. There are built-in associations between many of the ``clojure.core`` data predicates and corresponding
 generators, and the composite ops of **spec** know how to build generators atop those. If you call ``gen`` on a spec and it is
 unable to construct a generator for some subtree, it will throw an exception that describes where. You can pass generator-returning fns to
