--- a/content/guides/spec.adoc
+++ b/content/guides/spec.adoc
@@ -15,7 +15,7 @@ The <<xref/../../../about/spec#,spec>> library specifies the structure of data, 
 
 [source, clojure]
 ----
-[org.clojure/clojure "1.9.0-alpha9"]
+[org.clojure/clojure "1.9.0-alpha10"]
 ----
 
 To start working with spec, require the `clojure.spec` namespace or include in your namespace definition:
@@ -693,7 +693,7 @@ For example, we could spec the `clojure.core/declare` macro like this:
 ----
 (s/fdef clojure.core/declare
     :args (s/cat :names (s/* simple-symbol?))
-    :ret ::s/any)
+    :ret any?)
 ----
 
 The Clojure macroexpander will look for and conform :args specs registered for macros at macro expansion time (not runtime!). If an error is detected, `explain` will be invoked to explain the error:
