--- a/content/events/2016/euroclojure.adoc
+++ b/content/events/2016/euroclojure.adoc
@@ -4,7 +4,7 @@ EuroClojure
 :jbake-type: event
 :jbake-edition: 2016
 :jbake-link: http://euroclojure.org
-:jbake-location: Bratislava, Slovkaia
+:jbake-location: Bratislava, Slovakia
 :jbake-start: 2016-10-25
 :jbake-end: 2016-10-26
 
