--- a/content/events/2016/clojutre.adoc
+++ b/content/events/2016/clojutre.adoc
@@ -4,7 +4,7 @@ clojuTRE
 :jbake-type: event
 :jbake-edition: 2016
 :jbake-link: http://clojutre.org/2016/
-:jbake-location: Tampere, Finlands
+:jbake-location: Tampere, Finland
 :jbake-start: 2016-09-10
 :jbake-end: 2016-09-10
 
