--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,6 +12,11 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70"]
 |===
 
+| image::https://s3.amazonaws.com/titlepages.leanpub.com/clojurescript-unraveled/small[ClojureScript Unraveled,link="https://leanpub.com/clojurescript-unraveled"]
+| https://leanpub.com/clojurescript-unraveled[ClojureScript Unraveled] +
+by Andrey Antukh, Alejandro Gómez +
+Jul 25, 2016
+
 | image::http://ecx.images-amazon.com/images/I/518xLvhHZ1L._SL160.jpg[Web Development with Clojure,link="https://amzn.com/1680500821"]
 | http://amzn.com/1680500821[Web Development with Clojure] +
 by Dmitri Sotnikov +
